Add JWT token generator.

--- a/JwtDemo/appsettings.json
+++ b/JwtDemo/appsettings.json
@@ -14,5 +14,9 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDb;Database=JwtDemo;Trusted_Connection=true;MultipleActiveResultSets=true;"
+  },
+  "JwtIssuerOptions": {
+    "Issuer": "webApi",
+    "Audience": "http://localhost:5000/"
   }
 }
